--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
     steps:
       - name: Deploy to GitHub pages
         id: deployment
-        uses: action/deploy-pages@v4
+        uses: actions/deploy-pages@v4
